<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CambioActivity">


    <TextView
        android:id="@+id/tv_resultadoc"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="Resultado"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_siete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_siete" />

        <Button
            android:id="@+id/bt_ocho"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_ocho" />

        <Button
            android:id="@+id/bt_nueve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_nueve" />

        <Button
            android:id="@+id/bt_mas"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_mas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_cuatro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_cuatro" />

        <Button
            android:id="@+id/bt_cinco"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_cinco" />

        <Button
            android:id="@+id/bt_seis"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_seis" />

        <Button
            android:id="@+id/bt_menos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_menos" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_uno"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_uno" />

        <Button
            android:id="@+id/bt_dos"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_dos" />

        <Button
            android:id="@+id/bt_tres"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_tres" />

        <Button
            android:id="@+id/bt_mul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_mul" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_punto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_punto" />

        <Button
            android:id="@+id/bt_cero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_cero" />

        <Button
            android:id="@+id/bt_igual"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_igual" />

        <Button
            android:id="@+id/bt_div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bt_div" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_limpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_limpiar" />

</LinearLayout>